# ros2-dashing-mod-experiments

./: .gitignore
results/basic_bench/: batch_0  batch_1  batch_2  batch_3
ros1/: jitter_test_100ms.txt  jitter_test_10ms.txt
ros1/results/basic_bench/: batch_1024b_0  batch_1024b_1  batch_1024b_2  batch_1024b_3  batch_1024b_4  batch_16b_0  batch_16b_1  batch_16b_2  batch_16b_3  batch_16b_4  batch_256b_0  batch_256b_1  batch_256b_2  batch_256b_3  batch_256b_4  batch_32b_0  batch_32b_1  batch_32b_2  batch_32b_3  batch_32b_4  batch_4096b_0  batch_4096b_1  batch_4096b_2  batch_4096b_3  batch_4096b_4  batch_64b_0  batch_64b_1  batch_64b_2  batch_64b_3  batch_64b_4  batch_65536b_0  batch_65536b_1  batch_65536b_2  batch_65536b_3  batch_65536b_4  jitter16
ros1/results/basic_bench/activation_jitter/: jitter1024  jitter16  jitter256  jitter32  jitter4096  jitter64  jitter65536
ros1/src/basic_bench/: CMakeLists.txt  package.xml
ros1/src/basic_bench/src/: config.h  publisher.cpp  subscriber.cpp
ros1/src/bridge_bench/: CMakeLists.txt  package.xml
ros1/src/bridge_bench/src/: publisher.cpp  subscriber.cpp
ros2/results/basic_bench/: batch_1024b_0  batch_1024b_1  batch_1024b_2  batch_1024b_3  batch_1024b_4  batch_16b_0  batch_16b_1  batch_16b_2  batch_16b_3  batch_16b_4  batch_256b_0  batch_256b_1  batch_256b_2  batch_256b_3  batch_256b_4  batch_32b_0  batch_32b_1  batch_32b_2  batch_32b_3  batch_32b_4  batch_4096b_0  batch_4096b_1  batch_4096b_2  batch_4096b_3  batch_4096b_4  batch_64b_0  batch_64b_1  batch_64b_2  batch_64b_3  batch_64b_4  batch_65536b_0  batch_65536b_1  batch_65536b_2  batch_65536b_3  batch_65536b_4
ros2/results/basic_bench/activation_jitter/: jitter1024  jitter16  jitter256  jitter32  jitter4096  jitter64  jitter65536
ros2/src/basic_bench/: CMakeLists.txt  package.xml
ros2/src/basic_bench/src/: config.h  publisher.cpp  subscriber.cpp
ros2/src/basic_bench_msgs/: CMakeLists.txt  package.xml
ros2/src/basic_bench_msgs/msg/: BenchMinimal.msg
ros2/src/bridge_bench/: CMakeLists.txt  package.xml
ros2/src/bridge_bench/src/: publisher.cpp  subscriber.cpp
ros2/src/experiment_02/: CMakeLists.txt  package.xml
ros2/src/experiment_02/include/experiment_02/: simple_node.hpp
ros2/src/experiment_02/launch/: nick_test.py  spiking_4mb.py
ros2/src/experiment_02/src/: simple_node.cpp  simple_publisher.cpp  simple_subscriber.cpp
ros2/src/experiment_03/: CMakeLists.txt  package.xml
ros2/src/experiment_03/launch/: launch.py
ros2/src/experiment_04/: CMakeLists.txt  package.xml
ros2/src/experiment_04/launch/: launch.py
ros2/src/experiment_04/src/: multi_timer_publisher.cpp
ros2/src/experiment_05/: CMakeLists.txt  package.xml
ros2/src/experiment_05/launch/: launch.py  launch_mutex.py
ros2/src/experiment_05/src/: multi_timer_publisher.cpp  multi_timer_publisher_mutex.cpp
ros2/src/experiment_06/: CMakeLists.txt  notice.txt  package.xml
ros2/src/experiment_06/launch/: launch.py
ros2/src/experiment_06/src/: passer.cpp
ros2/src/experiment_a/: CMakeLists.txt  package.xml
ros2/src/experiment_a/src/: publisher.cpp  subscriber.cpp
src/basic_bench/msg/: Bench.msg
src/basic_bench/src/: config.h  publisher.cpp  subscriber.cpp
