<?xml version="1.0"?>
<package format="2">
  <name>bridge_bench</name>
  <version>0.0.0</version>
  <description>A package for bencharking the time a ROS message needs to travel node-to-node, through ROSBridge.</description>

  <maintainer email="g.m.c.v.d.hoven@student.tue.nl">Gijs van den Hoven</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>basic_bench</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>basic_bench</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>basic_bench</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
