<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bridge_bench</name>
  <version>0.0.0</version>
  <description>Benchmarking of ROS2-ROS1 communication with ROSBridge</description>
  <maintainer email="g.m.c.v.d.hoven@student.tue.nl">Gijs van den Hoven</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>basic_bench</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
