<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>experiment_a</name>
  <version>0.0.0</version>
  <description>Basic node-to-node message benchmarking using a publisher and subscriber. This version turns off the measuring feature, for performance comparisons.</description>
  <maintainer email="g.m.c.v.d.hoven@student.tue.nl">ruben</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>basic_bench_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
